--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "Responsive Portfolio Website",
   "main": "index.js",
+  "homepage": "https://sandeepsalkuti.github.io/Portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "SandeepReddy",
   "license": "MIT",
   "dependencies": {
-    "node-sass": "^4.14.1"
+    "gh-pages": "^4.0.0",
+    "node-sass": "^7.0.3"
   }
 }
